--- a/src/components/RosaSelvagemNarrative.module.css
+++ b/src/components/RosaSelvagemNarrative.module.css
@@ -3,7 +3,7 @@
     min-height: 100vh;
     background-color: #003366;
     /* Deep blue */
-    color: #fff;
+    color: #FFFEF0;
     padding-bottom: 4rem;
     font-family: 'Arial', sans-serif;
     overflow-x: hidden;
@@ -13,12 +13,17 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
     position: relative;
-    background: url('/rosa-selvagem_1.png') no-repeat center center;
+    background: 
+        linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), /* Dark overlay */
+        linear-gradient(to bottom, rgba(0, 0, 0, 0) 75%, rgba(0, 51, 102, 0.8) 100%),
+        url('/rosa-selvagem_1.png') no-repeat center center;
     background-size: cover;
-    padding-bottom: 4rem;
+    background-attachment: scroll; /* Allow dynamic movement */
+    will-change: background-position; /* Optimize for background movement */
+    padding-top: 4rem;
 }
 
 .headerOverlay {
@@ -35,19 +40,24 @@
 }
 
 .title {
-    font-size: 5rem;
-    font-weight: 900;
+    font-size: 8rem;
+    font-family: 'Tanker-Regular', sans-serif;
+    font-weight: normal;
     text-transform: uppercase;
     z-index: 2;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+    text-align: center; /* Center-align text */
+    margin-top: -1.5rem;
 }
 
 .subtitle {
-    font-size: 2rem;
+    font-size: 2.4rem;
+    font-family: 'BespokeSerif-Regular', serif;
+    font-weight: normal;
     margin-top: 1rem;
     z-index: 2;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
-    font-weight: bold;
+    text-align: center; /* Center-align text */
 }
 
 .backButton {
